RESULTS/AutoSpec/raw_results/out-4o-oopsla/09_0007/09_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/09_0007/09_merged.c:58:3: error: unterminated comment
   58 |   /*@;
      |   ^
